# marketing-attribution

./: .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/docs/: README.md  architecture.md  data-flow.md  development-workflow.md  glossary.md  project-overview.md  security.md  testing-strategy.md  tooling.md
.context/docs/qa/: README.md  getting-started.md  project-structure.md
.context/skills/: README.md
.context/skills/api-design/: SKILL.md
.context/skills/bug-investigation/: SKILL.md
.context/skills/code-review/: SKILL.md
.context/skills/commit-message/: SKILL.md
.context/skills/documentation/: SKILL.md
.context/skills/feature-breakdown/: SKILL.md
.context/skills/gh-projects-tasks/: SKILL.md
.github/workflows/: ci.yml
.opencode/agent/: vision.md
dashboards/: build_dashboard.py  grafana_dashboard.json
data/: README.md
docs/: PRD.md
src/: __init__.py  config.py  ingestion.py  logging_setup.py  main.py  persistence.py  preprocessing.py
src/models/: __init__.py  base.py  heuristics.py  markov.py  shapley.py
tests/: __init__.py  conftest.py  test_config.py  test_heuristics.py  test_ingestion.py  test_logging.py  test_main.py  test_markov.py  test_persistence.py  test_preprocessing.py  test_shapley.py
(+5 files in other folders)
